--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initialscale=1">
 
     
-<meta name="description" content="Tim Kunisky's homepage, a postdoctoral associate in Yale University's Department of Computer Science."/>
+<meta name="description" content="Rameesh Paul's homepage, a postdoctoral associate in Yale University's Department of Computer Science."/>
 
 
     <title>
