--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <strong>Research Interests:</strong> Algorithms, Randomness
 
 <hr noshade="noshade">
-<a href="papers.html">Research</a> |
+<a href="publications.html">Publications</a> |
 <a href="bio.html">Brief Biography</a>
 
 
