--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 <title> </title>
 <body>
 
-<strong>Papers:</strong> 
+<strong>Publications:</strong> 
 <ul>
 	
 	<li> <p><a href = "https://arxiv.org/abs/2104.00927">Independent Sets in Semi-random Hypergraphs</a>
