--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <img
        src="/static/img/headshot-min.jpg"
        class="img-fluid border border-secondary mx-auto ml-sm-3 mb-4 mb-sm-3 headshot"/>
-  <p class="first-graf">I am a postdoctoral associate in Yale University's Department of Computer Science, hosted by <a href="http://www.cs.yale.edu/homes/spielman/">Dan Spielman</a>. Before that, in spring of 2021, I completed my PhD at the Courant Institute of Mathematical Sciences at New York University, advised by <a href="https://people.math.ethz.ch/~abandeira/">Afonso Bandeira</a> (now at ETH Zurich) and <a href="https://cims.nyu.edu/~benarous/">G‌&#233;rard Ben Arous</a>.
+  <p class="first-graf">I am a postdoctoral associate in Yale University's Department of Computer Science, hosted by <a href="http://www.cs.yale.edu/homes/spielman/">Anand Louis</a>. Before that, in spring of 2021, I completed my PhD at the Courant Institute of Mathematical Sciences at New York University, advised by <a href="https://people.math.ethz.ch/~abandeira/">Afonso Bandeira</a> (now at ETH Zurich) and <a href="https://cims.nyu.edu/~benarous/">G‌&#233;rard Ben Arous</a>.
   </p>
 
   <p>This semester (spring of 2022), I am teaching <a href="/teaching/2022spring-sos/">a course on sum-of-squares optimization</a>. All are welcome to follow the course materials!</p>
