--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <a class="nav-link" href="/publications/">Publications</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/static/KuniskyCV.pdf">CV</a>
+                  <a class="nav-link" href="/RameeshCV.pdf">CV</a>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link" href="/teaching/" style="padding-right: 1px;">Teaching</a>
@@ -76,10 +76,9 @@
   <img
        src="/static/img/headshot-min.jpg"
        class="img-fluid border border-secondary mx-auto ml-sm-3 mb-4 mb-sm-3 headshot"/>
-  <p class="first-graf">I am a Ph.D student at Computer Science and Automation department at Indian Institute of Science, Bangalore, Karnataka advised by <a href="https://people.math.ethz.ch/~abandeira/">Anand Louis</a> (now at ETH Zurich) and <a href="https://cims.nyu.edu/~benarous/">G‌&#233;rard Ben Arous</a>.
+  <p class="first-graf">I am a Ph.D student at Computer Science and Automation department at Indian Institute of Science, Bangalore, Karnataka advised by <a href="https://people.math.ethz.ch/~abandeira/">Anand Louis</a>.
   </p>
 
-  <p>This semester (spring of 2022), I am teaching <a href="/teaching/2022spring-sos/">a course on sum-of-squares optimization</a>. All are welcome to follow the course materials!</p>
 
   <p>Some of my current research interests include:</p>
   <ul>
@@ -89,9 +88,9 @@
     <li>random optimization landscapes and the relationship between their high-dimensional geometry and the computational hardness of optimization.
   </ul>
 
-  <p>Even longer ago, I was an undergraduate at Princeton University, where my independent work was advised by <a href="http://people.math.gatech.edu/~mdamron6/">Michael Damron</a> and <a href="https://www.princeton.edu/~jburgess/">John Burgess</a>.</p>
+  <p>Prior to this, I was an M.Tech (Research) student at Indian Institute of Science, Bangalore where I was advised by <a href="http://people.math.gatech.edu/~mdamron6/">Anand Louis</a>.</p>
 
-  <p>You can reach me at <strong>dmitriy <span class="text-muted">[dot]</span> kunisky <span class="text-muted">[at]</span> yale.edu</strong>, or in person in Office 337 at 17 Hillhouse Avenue (the Yale Institute for Network Science).
+  <p>You can reach me at <strong>rameeshpaul<span class="text-muted">[at]</span> iisc.ac.in</strong>.
   </p>
 
 </div>
