--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
   <img
        src="/static/img/headshot-min.jpg"
        class="img-fluid border border-secondary mx-auto ml-sm-3 mb-4 mb-sm-3 headshot"/>
-  <p class="first-graf">I am a Ph.D student at Computer Science and Automation department at Indian Institute of Science, Bangalore, Karnataka advised by <a href="https://people.math.ethz.ch/~abandeira/">Anand Louis</a>.
+  <p class="first-graf">I am a Ph.D student at Computer Science and Automation department in Indian Institute of Science, Bengaluru, Karnataka,India advised by <a href="https://www.csa.iisc.ac.in/~anandl/">Anand Louis</a>.
   </p>
 
 
   <p>Some of my current research interests include:</p>
   <ul>
-    <li>Convex relaxations and their average-case performance on random problems;
-    <li>discrepancy theory and its algorithmic applications;
-    <li>computational "hard regimes" in problems arising in data science and optimization; and
-    <li>random optimization landscapes and the relationship between their high-dimensional geometry and the computational hardness of optimization.
+    <li>Approximation Algorithms, Graph Algorithms, Spectral Graph Theory;
+    <li>Convex Optimization, Semidefinite Programming, Sum-of-Squares/Lasserre Hierarchies;
+    <li>Randomness, Beyond Worst Case Analysis of Algorithms, High Dimensional Probability, Randomized and Online Algorithms;
+    <li>Combinatorial Optimization, Linear Programming
   </ul>
 
-  <p>Prior to this, I was an M.Tech (Research) student at Indian Institute of Science, Bangalore where I was advised by <a href="http://people.math.gatech.edu/~mdamron6/">Anand Louis</a>.</p>
+  <p>Prior to this, I was an M.Tech (Research) student at Indian Institute of Science, Bangalore where I was advised by <a href="https://www.csa.iisc.ac.in/~anandl/">Anand Louis</a>.</p>
 
   <p>You can reach me at <strong>rameeshpaul<span class="text-muted">[at]</span> iisc.ac.in</strong>.
   </p>
