--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <a class="nav-link" href="/publications/">Publications</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/RameeshCV.pdf">CV</a>
+                  <a class="nav-link" href="/Academic_CV.pdf">CV</a>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link" href="/teaching/" style="padding-right: 1px;">Teaching</a>
