--- a/publications/index.html
+++ b/publications/index.html
@@ -92,11 +92,10 @@
   </div>
 
   <p>
-    <strong>The discrepancy of unsatisfiable matrices and a lower bound for the Koml&#243s conjecture constant</strong>
+    <strong>><a href = "https://arxiv.org/abs/2104.00927">Independent Sets in Semi-random Hypergraphs</a></strong>
     <br>
-    Dmitriy Kunisky
-    <br>
-    <a href="https://arxiv.org/abs/2111.02974">[arXiv:2111.02974]</a>
+    Yash Khanna, Anand Louis, Rameesh Paul
+    <br> <i>WADS 2021 </i> 
   </p>
 
   <h4 class="pt-5">Other Writing</h4>
