--- a/publications/index.html
+++ b/publications/index.html
@@ -78,13 +78,11 @@
   <div class="strike py-2 pb-3">
     <span>2022</span>
   </div>
-
   <p>
-    <strong>The spectrum of the Grigoriev-Laurent pseudomoments</strong>
+    <strong><a href = "https://arxiv.org/abs/2205.03727">Exact recovery algorithm for Planted Bipartite Graph in Semi-random Graphs</a></strong>
     <br>
-    Dmitriy Kunisky, Cristopher Moore
-    <br>
-    <a href="http://arxiv.org/abs/2203.05693">[arXiv:2203.05693]</a>
+    Akash Kumar, Anand Louis, Rameesh Paul
+    <br> <i>Accepted to 49th EATCS International Colloquium on Automata, Languages and Programming (ICALP), 2022 </i> 
   </p>
 
   <div class="strike py-2 pb-3">
@@ -92,10 +90,10 @@
   </div>
 
   <p>
-    <strong>><a href = "https://arxiv.org/abs/2104.00927">Independent Sets in Semi-random Hypergraphs</a></strong>
+    <strong><a href = "https://arxiv.org/abs/2104.00927">Independent Sets in Semi-random Hypergraphs</a></strong>
     <br>
     Yash Khanna, Anand Louis, Rameesh Paul
-    <br> <i>WADS 2021 </i> 
+    <br> <i>17th Algorithms and Data Structures Symposium (WADS), 2021 </i> 
   </p>
 
   <h4 class="pt-5">Other Writing</h4>
@@ -105,22 +103,22 @@
   </div>
 
   <p>
-    <strong>Spectral barriers in certification problems</strong>
+    <strong>Recovery Algorithms for planted structures in Semi-random model</strong>
     <br>
-    Dmitriy Kunisky (PhD thesis)
+    Rameesh Paul (M.Tech (Research) thesis)
     <br>
-    <a href="/static/publications/thesis/spectral-barriers-certification-problems.pdf">[PDF]</a>
-    <a href="/static/publications/thesis/spectral-barriers-certification-problems_slides.pdf">[Slides]</a>
+    <a href="thesis.pdf">[PDF]</a>
+<!--     <a href="/static/publications/thesis/spectral-barriers-certification-problems_slides.pdf">[Slides]</a> -->
   </p>
 
   <div class="strike py-2 pb-3">
-    <span>2019</span>
+    <span>2020</span>
   </div>
 
   <p>
     <strong>Notes on computational hardness of hypothesis testing: predictions using the low-degree likelihood ratio</strong>
     <br>
-    Dmitriy Kunisky, Alexander S. Wein, Afonso S. Bandeira
+    Rameesh Paul, Arka Ray
     <br>
     <a href="https://arxiv.org/abs/1907.11636">[arXiv:1907.11636]</a>
     <a href="/static/publications/low-deg-notes/low-deg-notes_slides.pdf">[Slides]</a>
