--- a/publications/index.html
+++ b/publications/index.html
@@ -116,34 +116,11 @@
   </div>
 
   <p>
-    <strong>Notes on computational hardness of hypothesis testing: predictions using the low-degree likelihood ratio</strong>
+    <strong>Sum of Squares and Lasserre Hierarchy</strong>
     <br>
     Rameesh Paul, Arka Ray
     <br>
-    <a href="https://arxiv.org/abs/1907.11636">[arXiv:1907.11636]</a>
-    <a href="/static/publications/low-deg-notes/low-deg-notes_slides.pdf">[Slides]</a>
-  </p>
-
-  <div class="strike py-2 pb-3">
-    <span>Older</span>
-  </div>
-
-  <p>
-    <strong>The theft and the honest toil: applications of large cardinal axioms to the theory of measurable selection</strong>
-    <br>
-    Dmitriy Kunisky (Undergraduate Senior Thesis, 2014)
-    <br>
-    <a href="/static/publications/theft-and-honest-toil.pdf">[PDF]</a>
-    <br>
-    <span class="text-secondary pt-2" style="display: block;"><strong>Note:</strong> If you are curious about this topic, my advisor John Burgess later wrote the paper <a class="text-info" href="https://academic.oup.com/philmat/article-abstract/29/3/353/6321694?redirectedFrom=fulltext"><i>Measurable Selections: A Bridge Between Large Cardinals and Scientific Applications?</i> (2021)</a> that talks about my work and related developments much more clearly than I could muster in my thesis.</span>
-  </p>
-
-  <p>
-    <strong>Discrete applications of Brownian motion</strong>
-    <br>
-    Dmitriy Kunisky (Undergraduate Junior Paper, 2013)
-    <br>
-    <a href="/static/publications/brownian-motion.pdf">[PDF]</a>
+    <a href="/sos.pdf">[Report]</a>
   </p>
 
 </div>
