--- a/publications/index.html
+++ b/publications/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -75,9 +74,9 @@
   <h4 class="pt-1">Publications and Preprints</h4>
 
 
-  <div class="strike py-2 pb-3">
+<!--   <div class="strike py-2 pb-3">
     <span>2022</span>
-  </div>
+  </div> -->
   <p>
     <strong><a href = "https://arxiv.org/abs/2205.03727">Exact recovery algorithm for Planted Bipartite Graph in Semi-random Graphs</a></strong>
     <br>
@@ -85,9 +84,9 @@
     <br> <i>Accepted to 49th EATCS International Colloquium on Automata, Languages and Programming (ICALP), 2022 </i> 
   </p>
 
-  <div class="strike py-2 pb-3">
+<!--   <div class="strike py-2 pb-3">
     <span>2021</span>
-  </div>
+  </div> -->
 
   <p>
     <strong><a href = "https://arxiv.org/abs/2104.00927">Independent Sets in Semi-random Hypergraphs</a></strong>
@@ -98,9 +97,9 @@
 
   <h4 class="pt-5">Other Writing</h4>
 
-  <div class="strike py-2 pb-3">
+<!--   <div class="strike py-2 pb-3">
     <span>2021</span>
-  </div>
+  </div> -->
 
   <p>
     <strong>Recovery Algorithms for planted structures in Semi-random model</strong>
@@ -111,9 +110,9 @@
 <!--     <a href="/static/publications/thesis/spectral-barriers-certification-problems_slides.pdf">[Slides]</a> -->
   </p>
 
-  <div class="strike py-2 pb-3">
+<!--   <div class="strike py-2 pb-3">
     <span>2020</span>
-  </div>
+  </div> -->
 
   <p>
     <strong>Sum of Squares and Lasserre Hierarchy</strong>
