--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <div class="pt-4">
   <img
-       src="/static/img/headshot-min.jpg"
+       src="/static/css/pp.jpeg"
        class="img-fluid border border-secondary mx-auto ml-sm-3 mb-4 mb-sm-3 headshot"/>
   <p class="first-graf">I am a Ph.D student at Computer Science and Automation department in Indian Institute of Science, Bengaluru, Karnataka,India advised by <a href="https://www.csa.iisc.ac.in/~anandl/">Anand Louis</a>.
   </p>
