--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <img
        src="/static/css/pp.jpeg"
        class="img-fluid border border-secondary mx-auto ml-sm-3 mb-4 mb-sm-3 headshot"/>
-  <p class="first-graf">I am a Ph.D student at Computer Science and Automation department in Indian Institute of Science, Bengaluru, Karnataka,India advised by <a href="https://www.csa.iisc.ac.in/~anandl/">Anand Louis</a>.
+  <p class="first-graf">I am a Ph.D student at Computer Science and Automation department in Indian Institute of Science, Bengaluru, Karnataka,India advised by <a href="https://www.csa.iisc.ac.in/~anandl/">Prof. Anand Louis</a>.
   </p>
 
 
@@ -87,7 +87,7 @@
     <li>Combinatorial Optimization, Linear Programming
   </ul>
 
-  <p>Prior to this, I was an M.Tech (Research) student at Indian Institute of Science, Bangalore where I was advised by <a href="https://www.csa.iisc.ac.in/~anandl/">Anand Louis</a>.</p>
+  <p>Prior to this, I was an M.Tech (Research) student at Indian Institute of Science, Bangalore where I was advised by <a href="https://www.csa.iisc.ac.in/~anandl/">Prof. Anand Louis</a>.</p>
 
   <p>You can reach me at <strong>rameeshpaul<span class="text-muted">[at]</span> iisc.ac.in</strong>.
   </p>
