--- a/teaching/index.html
+++ b/teaching/index.html
@@ -50,7 +50,7 @@
                   <a class="nav-link" href="/publications/">Publications</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/static/KuniskyCV.pdf">CV</a>
+                  <a class="nav-link" href="/static/Academic_CV.pdf">CV</a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="/teaching/" style="padding-right: 1px;">Teaching</a>
@@ -77,57 +77,14 @@
 <table class="table">
   <tbody>
     <tr>
-      <td style="padding-left: 0;">Spring 2022</td>
-      <td>
-        <a href="/teaching/2022spring-sos/"><strong>Sum-of-Squares Optimization</strong></a>
-        <br>
-        Instructor
-      </td>
-    </tr>
-
-    <tr>
       <td style="padding-left: 0;">Fall 2020</td>
       <td>
-        <strong>Mathematical Statistics</strong>
+        <a href=""><strong>Design and Analysis of Algorithms</strong></a>
         <br>
-        Section Leader and Grader <span>(with <a href="https://www.jonathannilesweed.com">Prof. Jonathan Niles-Weed</a>)</span>
+        Teaching Assistant
       </td>
     </tr>
 
-    <tr>
-      <td style="padding-left: 0;">Summer 2020</td>
-      <td>
-        <strong>Discrete Mathematics</strong>
-        <br>
-        Section Leader and Grader <span>(with <a href="https://math.nyu.edu/~vbhat/index.html">Prof. Vindya Bhat</a>)</span>
-      </td>
-    </tr>
-
-    <tr>
-      <td style="padding-left: 0;">Fall 2018</td>
-      <td>
-        <strong>Probabilistic Time Series Analysis</strong>
-        <br>
-        Section Leader and Grader <span>(with <a href="http://csavin.wixsite.com/savinlab">Prof. Cristina Savin</a>)</span>
-      </td>
-    </tr>
-
-    <tr>
-      <td></td>
-      <td></td>
-    </tr>
-  </tbody>
-</table>
-
-</div>
-
-<h4 class="pt-1 pb-3">Advising</h4>
-
-<p>I have advised the following students with independent and graduate work. Please get in touch if you'd be interested in working with me!</p>
-
-<ul>
-  <li> <strong>Nikolaus Doppelbauer</strong> (ETH Zurich Master's degree, co-advised with Afonso Bandeira) <br> "Packing problems in groups, including mutually unbiased bases: symmetries and dual witnesses." <br> <a href="/publications/mub-dual-bounds/">[Supplementary Materials]</a>
-</ul>
 
 
         </div>
