--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/Academic_CV.pdf">CV</a>
                 </li>
+                 <li class="nav-item ">
+                  <a class="nav-link" href="/talks/">Talks</a>
+                </li>
                 <li class="nav-item ">
                   <a class="nav-link" href="/teaching/" style="padding-right: 1px;">Teaching</a>
                 </li>
