--- a/talks/index.html
+++ b/talks/index.html
@@ -52,6 +52,9 @@
                   <a class="nav-link" href="/Academic_CV.pdf">CV</a>
                 </li>
                 <li class="nav-item ">
+                  <a class="nav-link" href="/talks/">Talks</a>
+                </li>
+                <li class="nav-item ">
                   <a class="nav-link" href="/teaching/" style="padding-right: 1px;">Teaching</a>
                 </li>
               </ul>
