--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,6 +52,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/static/Academic_CV.pdf">CV</a>
                 </li>
+                <li class="nav-item ">
+                  <a class="nav-link" href="/talks/">Talks</a>
+                </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="/teaching/" style="padding-right: 1px;">Teaching</a>
                 </li>
