--- a/talks/index.html
+++ b/talks/index.html
@@ -78,10 +78,18 @@
 
 
   <p>
-    <strong><a href = "https://arxiv.org/abs/2104.00927">Independent Sets in Semi-random Hypergraphs</a></strong>
-    <br>
-    Yash Khanna, Anand Louis, Rameesh Paul
-    <br> <i>17th Algorithms and Data Structures Symposium (WADS), 2021 </i> 
+    <strong><a href = "https://www.youtube.com/watch?v=FWGFdz1r660">Independent Sets in Semi-random Hypergraphs</a></strong>
+    <br> <i>ACM-India 16th Academic Research and Careers for Students, Feb 2022 </i> 
+  </p>
+  
+   <p>
+    <strong><a>Independent Sets in Semi-random Hypergraphs</a></strong>
+    <br> <i>17th Algorithms and Data Structures Symposium (WADS), Aug 2021 </i> 
+  </p>
+  
+   <p>
+    <strong><a href = "https://www.youtube.com/watch?v=FdwcJw8MSAA">Independent Sets in Semi-random Hypergraphs</a></strong>
+    <br> <i>12th EECS Students Research Symposium, May 2021 </i> 
   </p>
 
 
