--- a/teaching/index.html
+++ b/teaching/index.html
@@ -56,7 +56,7 @@
                   <a class="nav-link" href="/talks/">Talks</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="/teaching/" style="padding-right: 1px;">Teaching</a>
+                  <a class="nav-link" href="/teaching/" style="padding-right: 1px;">Courses</a>
                 </li>
               </ul>
             </div>
@@ -82,9 +82,23 @@
     <tr>
       <td style="padding-left: 0;">Fall 2020</td>
       <td>
-        <a href=""><strong>Design and Analysis of Algorithms</strong></a>
+        <a><strong>Design and Analysis of Algorithms</strong></a>
         <br>
         Teaching Assistant
+      </td>
+    </tr>
+    
+    
+    <div class="pt-3">
+
+  <h4 class="pt-1 pb-4">Graduate Courses</h4>
+
+<table class="table">
+  <tbody>
+    <tr>
+      <td style="padding-left: 0;">Fall 2020</td>
+      <td>
+        <a href="https://sites.google.com/view/prathosh/courses-jan-2022/e1213-pattern-recognition-and-neural-networks"><strong>Pattern Recognition and Neural Networks</strong></a>
       </td>
     </tr>
 
