--- a/publications/index.html
+++ b/publications/index.html
@@ -118,11 +118,11 @@
   </div> -->
 
   <p>
-    <strong>Sum of Squares and Lasserre Hierarchy</strong>
+    <strong><a href="/sos.pdf">Sum of Squares and Lasserre Hierarchy</strong></a>
     <br>
     Rameesh Paul, Arka Ray
     <br>
-    <a href="/sos.pdf">[Report]</a>
+    
   </p>
 
 </div>
