--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <img
        src="/static/css/pp.jpeg"
        class="img-fluid border border-secondary mx-auto ml-sm-3 mb-4 mb-sm-3 headshot"/>
-  <p class="first-graf">I am a Ph.D student at Computer Science and Automation department in Indian Institute of Science, Bengaluru, Karnataka,India advised by <a href="https://www.csa.iisc.ac.in/~anandl/">Prof. Anand Louis</a>.
+  <p class="first-graf">I am a Ph.D student at Computer Science and Automation department in Indian Institute of Science, Bangalore, Karnataka,India advised by <a href="https://www.csa.iisc.ac.in/~anandl/">Prof. Anand Louis</a>.
   </p>
 
 
