--- a/publications/index.html
+++ b/publications/index.html
@@ -103,13 +103,18 @@
 <!--   <div class="strike py-2 pb-3">
     <span>2021</span>
   </div> -->
-
+ 
   <p>
-    <strong>Recovery Algorithms for planted structures in Semi-random model</strong>
+    <strong><a href="/thesis.pdf">Recovery Algorithms for planted structures in Semi-random model</strong></a>
     <br>
-    Rameesh Paul (M.Tech (Research) thesis)
+    Rameesh Paul, M.Tech (Research) thesis
     <br>
-    <a href="thesis.pdf">[PDF]</a>
+    
+  </p>
+  
+  
+  
+
 <!--     <a href="/static/publications/thesis/spectral-barriers-certification-problems_slides.pdf">[Slides]</a> -->
   </p>
 
@@ -118,7 +123,7 @@
   </div> -->
 
   <p>
-    <strong><a href="/sos.pdf">Sum of Squares and Lasserre Hierarchy</strong></a>
+    <strong><a href="/sos.pdf">Sum of Squares and Lasserre Hierarchy</strong>[Project Report]</a>
     <br>
     Rameesh Paul, Arka Ray
     <br>
