--- a/publications/index.html
+++ b/publications/index.html
@@ -123,9 +123,9 @@
   </div> -->
 
   <p>
-    <strong><a href="/sos.pdf">Sum of Squares and Lasserre Hierarchy</strong>[Project Report]</a>
+    <strong><a href="/sos.pdf">Sum of Squares and Lasserre Hierarchy</strong></a>
     <br>
-    Rameesh Paul, Arka Ray
+    Rameesh Paul, Arka Ray [Project Report]
     <br>
     
   </p>
