--- a/publications/index.html
+++ b/publications/index.html
@@ -105,9 +105,9 @@
   </div> -->
  
   <p>
-    <strong><a href="/thesis.pdf">Recovery Algorithms for planted structures in Semi-random model</strong></a>
+    <strong><a href="/thesis.pdf">Recovery Algorithms for planted structures in Semi-random model</strong>[M.Tech (Research) thesis]</a>
     <br>
-    Rameesh Paul, M.Tech (Research) thesis
+    Rameesh Paul
     <br>
     
   </p>
@@ -123,9 +123,9 @@
   </div> -->
 
   <p>
-    <strong><a href="/sos.pdf">Sum of Squares and Lasserre Hierarchy</strong></a>
+    <strong><a href="/sos.pdf">Sum of Squares and Lasserre Hierarchy</strong>[Project Report]</a>
     <br>
-    Rameesh Paul, Arka Ray [Project Report]
+    Rameesh Paul, Arka Ray 
     <br>
     
   </p>
