--- a/publications/index.html
+++ b/publications/index.html
@@ -105,7 +105,7 @@
   </div> -->
  
   <p>
-    <strong><a href="/thesis.pdf">Recovery Algorithms for planted structures in Semi-random model </strong>[M.Tech (Research) thesis]</a>
+    <strong><a href="thesis.pdf">Recovery Algorithms for planted structures in Semi-random model </strong>[M.Tech (Research) thesis]</a>
     <br>
     Rameesh Paul
     <br>
