--- a/teaching/index.html
+++ b/teaching/index.html
@@ -105,6 +105,27 @@
         <strong>Set Systems and Hypergraphs</strong>
       </td>
     </tr>
+   
+     <tr>
+      <td style="padding-left: 0;">Spring 2020</td>
+      <td>
+        <strong>Approximaiton Algorithms</strong>
+      </td>
+    </tr>
+    
+    <tr>
+      <td style="padding-left: 0;">Spring 2020</td>
+      <td>
+        <strong>Convex Optimization</strong>
+      </td>
+    </tr>
+    
+    <tr>
+      <td style="padding-left: 0;">Fall 2019</td>
+      <td>
+        <strong>Design and Analysis of Algorithms</strong>
+      </td>
+    </tr>
 
     <tr>
       <td></td>
