--- a/teaching/index.html
+++ b/teaching/index.html
@@ -81,7 +81,7 @@
     <tr>
       <td style="padding-left: 0;">Spring 2022</td>
       <td>
-        <a href="/teaching/2022spring-sos/"><strong>Pattern Recognition and Neural Networks</strong></a>
+        <a href="https://sites.google.com/view/prathosh/courses-jan-2022/e1213-pattern-recognition-and-neural-networks"><strong>Pattern Recognition and Neural Networks</strong></a>
       </td>
     </tr>
 
