--- a/talks/index.html
+++ b/talks/index.html
@@ -55,7 +55,7 @@
                   <a class="nav-link" href="/talks/">Talks</a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link" href="/teaching/" style="padding-right: 1px;">Teaching</a>
+                  <a class="nav-link" href="/teaching/" style="padding-right: 1px;">Courses</a>
                 </li>
               </ul>
             </div>
