--- a/teaching/index.html
+++ b/teaching/index.html
@@ -109,7 +109,7 @@
      <tr>
       <td style="padding-left: 0;">Spring 2020</td>
       <td>
-        <strong>Approximaiton Algorithms</strong>
+        <strong>Approximation Algorithms</strong>
       </td>
     </tr>
     
