--- a/talks/index.html
+++ b/talks/index.html
@@ -79,7 +79,7 @@
 
   <p>
     <strong><a href = "https://www.youtube.com/watch?v=FWGFdz1r660">Independent Sets in Semi-random Hypergraphs</a></strong>
-    <br> <i>ACM-India 16th Academic Research and Careers for Students, Feb 2022 </i> 
+    <br> <i>ACM-India 16th Academic Research and Careers for Students Symposium, Feb 2022 </i> 
   </p>
   
    <p>
