--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+   <title>HTML Redirect</title>
+   <meta http-equiv="refresh" content="5; url = https://sites.google.com/view/rameesh-paul/" />
+</head>
+</html>
+
+
 <!-- <!DOCTYPE html>
 <html lang="en">
 
