--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>HTML Redirect</title>
-   <meta http-equiv="refresh" content="5; url = https://sites.google.com/view/rameesh-paul/" />
+   <title>Redirecting to new webpage</title>
+   <meta http-equiv="refresh" content="0; url = https://sites.google.com/view/rameesh-paul/" />
 </head>
 </html>
 
