--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,4 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+   <title>Redirecting to new webpage</title>
+   <meta http-equiv="refresh" content="0; url = https://sites.google.com/view/rameesh-paul/" />
+</head>
+</html>
 
+
+
+
+
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
 
@@ -168,3 +180,4 @@
     </script>
   </body>
 </html>
+ -->
