--- a/publications/index.html
+++ b/publications/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+<html>
+<head>
+   <title>Redirecting to new webpage</title>
+   <meta http-equiv="refresh" content="0; url = https://sites.google.com/view/rameesh-paul/" />
+</head>
+</html>
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -146,3 +158,4 @@
     </script>
   </body>
 </html>
+ -->
