--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://newdomain.com/" />
+    <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/rameesh-paul/home" />
     <script>
-      window.location.href = "https://newdomain.com/";
+      window.location.href = "https://sites.google.com/view/rameesh-paul/home";
     </script>
     <title>Redirecting...</title>
   </head>
   <body>
-    If you are not redirected automatically, follow this <a href="https://newdomain.com/">link</a>.
+    If you are not redirected automatically, follow this 
+    <a href="https://sites.google.com/view/rameesh-paul/home">link to my new page</a>.
   </body>
 </html>
